--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 <link rel="apple-touch-icon" href="./MHProgrammer_files/IMG-20240916-WA0054 (2).jpg">
 <meta name="msapplication-TileImage" content="./MHProgrammer_files/IMG-20240916-WA0054 (2).jpg">
 	<style>undefined</style><script src="./MHProgrammer_files/wp-emoji-release.min.js.download" defer=""></script><link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin="use-credentials"><link rel="preconnect" href="https://fonts.gstatic.com/"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500;600;700;800;900&amp;display=swa">
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9758483934323958" crossorigin="anonymous"></script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9758483934323958"
+			crossorigin="anonymous"></script>
 	</head>
 <body class="home blog btn--effect-six section-title-two menu__active-one hfeed" style="" data-aos-easing="ease" data-aos-duration="1000" data-aos-delay="0">
 
