Update About! – MHProgrammer.html

--- a/About! – MHProgrammer.html
+++ b/About! – MHProgrammer.html
@@ -133,7 +133,8 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 <link rel="apple-touch-icon" href="./MHProgrammer_files/IMG-20240916-WA0054 (2).jpg">
 <meta name="msapplication-TileImage" content="./MHProgrammer_files/IMG-20240916-WA0054 (2).jpg">
 	<script src="./About! – MHProgrammer_files/wp-emoji-release.min.js.download" defer=""></script><link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin="use-credentials"><link rel="preconnect" href="https://fonts.gstatic.com/"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500;600;700;800;900&amp;display=swa">
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9758483934323958" crossorigin="anonymous"></script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9758483934323958"
+     crossorigin="anonymous"></script>
 	</head>
 <body class="post-template-default single single-post postid-1 single-format-standard btn--effect-six section-title-two menu__active-one" style="" data-aos-easing="ease" data-aos-duration="1000" data-aos-delay="0">
 
